# curacao-lottery

./: .gitignore  Cargo.toml  README.md  lottery.py  new_db.sql  requirements.txt  test_lottery.py
database/: basedb.db
src/: main.rs
